# ambulancePipeline_public

./: README.md  configs.py  orchestrator.py  paths.py  pyproject.toml
data/input_synthetic/: dispatch_registers.parquet  generate_synthetic_inputs_region_pbf.py  gps_logs.parquet  synthetic.osm.pbf
diagnostics/: diagnose_phase1_realised.py  diagnose_phase2_prediction.py  diagnose_phase3_calibration.py  diagnose_phase4_evaluation.py  generate_diagnostics_report.py
docker/: gdal_image.txt  osrm_image.txt
extended_tests/: extended_test_utils.py  generate_extended_tests_report.py  run_sensitivity_analysis.py  run_spatial_transferability.py  run_static_profile_expressiveness.py  run_temporal_validation.py
methodology/: p1s1_build_candidate_trips.py  p1s2_identify_trip_start_end.py  p2s3_adjust_osrm_accessibility.py  p2s4_map_match_routes.py  p2s5_extract_route_features.py  p2s6_compute_prediction_errors.py  p3s7_prepare_regression_dataset.py  p3s8_run_regression.py  p3s9_create_calibrated_profile.py  p4s10_compute_calibrated_predictions.py  p4s11_evaluate_calibration.py  p4s12_generate_results_report.py
profiles/: car_base.lua
utils/: osm_utils.py  osrm_utils.py
