[project]
name = "ambulancepipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "duckdb>=1.5.2",
    "geopandas>=1.1.3",
    "ijson>=3.5.0",
    "ipykernel>=7.2.0",
    "isal>=1.8.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "orjson>=3.11.8",
    "polars>=1.40.0",
    "pyarrow>=24.0.0",
    "reportlab>=4.5.1",
    "requests>=2.33.1",
    "shapely>=2.1.2",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
    "zstandard>=0.25.0",
]
